--- a/todo/index.html
+++ b/todo/index.html
@@ -11,10 +11,30 @@
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
 
+    <script>
+        var paths = {
+            "rxjs/*": "node_modules/rxjs/bundles/Rx.min.js",
+            "@angular/*": "node_modules/@angular/*"
+        }
+        var packages = { "app": {} };
+        var angularModules = ["common", "compiler", "core", "forms", "platform-browser", "platform-browser-dynamic"];
+        angularModules.forEach(function (pkg)
+        {
+            packages["@angular/" + pkg] = {main: "/bundles/" + pkg + ".umd.min.js"};
+        });
+        System.config({paths: paths, packages: packages});
+        System.import("app/main").catch(function(err)
+        {
+            console.error(err);
+        });
+    </script>
+
 </head>
 
-<body class="m-3">
-    <todo-app>Angular placeholder</todo-app>
+<body>
+    <div class="container-fluid">
+        <todo-app></todo-app>
+    </div>
 </body>
 
 
